# haskell-flake-example

./: README.md  flake.nix
horizon-platform-template/: default.nix  horizon-platform-template.cabal
